# fluid-simulation

./: .clang-format  .gitignore  CMakeLists.txt
include/: material-point.hpp  material.hpp  physical-model.hpp  physics.hpp  view.hpp
src/: main.cpp  material-point.cpp  material.cpp  view.cpp
theory/: example.py  game.py  theory.md
